# qdrant-markdown-indexer

./: README.md  pyproject.toml
.github/workflows/: update-search-index.yaml
markdown_search/: config.py  encode.py  index.py  parser.py  search.py
tools/: index_qdrant_docs.sh
